# amlstring

./: .gitignore  .gitmodules  AMBasicCString.h  AMCEFNV1a.h  AMLString.h  CMakeLists.txt  README.md
docs/: Mainpage.h  common.h  crypto.h  doxyfile  strings.h  typing.h
src/: AMLString.cpp  AMLStringConfig.h.in
test/Hash/: test_AMFNV1a.cpp
test/LString/: cs.mo  cs.po  test_AMLString.cpp
